--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-/* .App {
-  text-align: center;
-}
+.price-product {
+    padding: 1vw;
+    font-size: calc(10px + .4vw);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container-products {
+    /* border: 1px solid red; */
+    margin-top: 2vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-fluid {
+    font-size: x-large;
+    padding: 10px;
+    position: fixed;
+    top: 7vh;
+    /* border: 1px solid rgb(50, 110, 30); */
+    background-color: rgb(237, 237, 237);
+    z-index: 100;
+}
+.main-container-product-sidebar{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid rgb(86, 125, 73);
+  margin-top: 5vh;
+  width: 100%;
 }
+.side-bar{
+  width: 20%;
+  height: 100vh;
+  padding: 2%;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.side-bar>ul{
+  list-style: none;
+}
+.product-frame{
+  width: 80%;
+  overflow: auto;
+  border: 1px solid rgb(164, 38, 137);
+  height: 83vh;
+}
